# aimd

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  aimd-macos-arm64
.github/workflows/: release.yml
docs/: EXAMPLES.md
src/: lib.rs  main.rs
tests/: README.md  lib_tests.rs
